fixed words w/o spaces overflowing

--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ ul {
 }
 
 li {
+  overflow-wrap: break-word;
   background-color: MediumSpringGreen	;
   color: #000;
   font-size: 20px;
